# normals_from_shading

./: Cargo.toml  readme.md
src/: albedo_utils.rs  lib.rs  main.rs  normal_utils.rs  radiance_map.rs
tests/: tile.rs
