[package]
name = "normals_from_shading"
version = "0.1.0"
edition = "2021"

[lib]
name="normals_from_shading"
path="src/lib.rs"

[profile.dev]
opt-level = 0   # Keep your project in debug mode with no optimizations

[profile.dev.package."*"]
opt-level = 3   # Build all dependencies in release mode (optimization level 3)

[dependencies]
image = "0.25.4"
nalgebra = "0.33.1"
